--- a/jhbuild.desktop.in
+++ b/jhbuild.desktop.in
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Type=Application
-_Name=GNOME Build Tool
-_Comment=Build GNOME modules
+Name=GNOME Build Tool
+Comment=Build GNOME modules
 Exec=jhbuild gui
 Categories=GNOME;Development;Building;
 Icon=applications-development
