--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,10 +1,3 @@
+noinst_DATA = jhbuild.desktop
 
-xsession_in_files = jhbuild.desktop.in
-noinst_DATA = $(xsession_in_files:.desktop.in=.desktop)
-
-EXTRA_DIST = jhbuild.desktop.in
-
-DISTCLEANFILES = jhbuild.desktop
-
-@INTLTOOL_DESKTOP_RULE@
-
+EXTRA_DIST = jhbuild.desktop
